tests/semantic/fact_number2/fact_number2.dl
// Check if unquoted numbers are rejected by the parser
.type Node

.decl F (node1:Node, node2:number)
.input F ()

// Not ok, number
F("1000","0002").

